Changes
=======

1.2.3 (TBD)
-----------

- Search for GDAL data in installed packages is done before searching in
  built-in locations when entering an Env, as is already done when importing
  rasterio.env.

1.2.2 (2021-04-06)
------------------

- Add a --nodata option to rio-clip to help support the relative complement use
  case (#2087).
- Remove boundless keyword argument from WarpedVRT method signatures (#2084).
- Implement the advertised intent of warp.reproject's src_crs parameter. It can
  override the source's crs (#2036).
- A regression in the merge tool's min and max methods has been fixed (#2145).
- windows.from_bounds raises WindowError when the given bounds and transform are
  inconsistent with each other (#2138).
- Support for GDAL's "sum" resampling algorith has been added (#2137).
- Cython and numpy versions are pinned in pyproject.toml. Numpy versions
  correspond to scipy's oldest supported versions for Python versions 3.6-3.10.
- GDAL data path is configured in env.py with set_gdal_config (#2139).
- AWS sessions are not created for pre-signed URLs (#2133).

1.2.1 (2021-03-03)
------------------

- Cast rio-calc's nodata option before filling rasters (#2110).
- The rio-clip command only works on rasters with rectilinear geo transforms.
  This is noted in the command's help and an error will be raised if the
  requirement is not met (#2115).
- Support for geotransforms with rotation in Window.from_bounds and
  feature.geometry_window has been added (#2112).
- Fix an off-by-one error in the merge tool (#2106, #2109).

1.2.0 (2021-01-25)
------------------

Note well: Python versions before 3.6 are no longer supported by this project.

New features:

- Binary wheels on PyPI include PROJ 7.2.1 and GDAL 3.2.1.
- Support for Azure Blob Storage using an "az" URI scheme.
- Support for RPCs and coordinate transformations and raster warping with RPCs.
- dst_path and dst_kwds parameters for rasterio's merge tool allow results to