@@ -4,6 +4,8 @@ Changes
 1.2.3 (TBD)
 -----------
 
+- Fix a regression introduced in 1.2.2: from_bounds() can again return Windows
+  of zero height or width.
 - Search for GDAL data in installed packages is done before searching in
   built-in locations when entering an Env, as is already done when importing
   rasterio.env.
